--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,6 @@ jobs:
           distribution: goreleaser
           version: latest
           args: release --clean
-          workdir: myfolder
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       -
@@ -35,4 +34,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: myapp
-          path: myfolder/dist/*
+          path: dist/*
